<resources>
    <string name="app_name">Pi-helper</string>
    <string name="scanning_ip_address">Scanning IP Address:</string>
    <string name="accessibility_description_pi_helper_logo">Pi-helper Logo</string>
    <string name="label_status">Status: %1$s</string>
    <string name="action_enable">Enable</string>
    <string name="action_disable">Disable</string>
    <string name="action_disable_10_seconds">Disable for 10 seconds</string>
    <string name="action_disable_10_seconds_short">Disable for 10 seconds</string>
    <string name="action_disable_30_seconds">Disable for 30 seconds</string>
    <string name="action_disable_30_seconds_short">Disable for 30 seconds</string>
    <string name="action_disable_5_minutes">Disable for 5 minutes</string>
    <string name="action_disable_5_minutes_short">Disable for 5 minutes</string>
    <string name="action_disable_custom">Disable for custom time</string>
    <string name="action_disable_permanently">Disable Permanently</string>
    <string name="status_disabled">Disabled</string>
    <string name="status_enabled">Enabled</string>
    <string name="scan_failed">Please ensure you are connected to the same Wi-Fi network that the Pi-Hole is running on and try again, or enter the Pi-Hole\'s IP address manually.</string>
    <string name="scan_failed_title">Pi-helper failed to find your Pi-Hole</string>
    <string name="connection_failed">Please ensure you are connected to the same Wi-Fi network that the Pi-Hole is running on, and that you\'re using the correct IP address and try again.</string>
    <string name="connection_failed_title">Pi-helper failed to connect to your Pi-Hole</string>
    <string name="configure_pihelper">Please configure Pi-helper before using shortcuts</string>
    <string name="or">or</string>
    <string name="action_settings">Settings</string>
    <string name="action_forget_pihole">Forget Pi-hole</string>
    <string name="content_info"><![CDATA[Pi-helper was made with ❤ by <a href=\"https://wbrawner.com\">William Brawner</a>. You can find the source code or report issues on the <a href=\"https://github.com/wbrawner/PiHelperAndroid\">GitHub page</a> for the project.]]></string>
    <string name="confirm_forget_pihole">Are you sure you want to forget your Pi-hole?</string>
    <string name="warning_cannot_be_undone">This cannot be undone.</string>
    <string name="title_crash_notification">Pi-helper Crashed!</string>
    <string name="text_crash_notification">Would you please consider sending the crash report to me?</string>
    <string name="channel_crash_notification">Crash Reports</string>
    <string name="status_unknown">Unknown</string>
    <string name="duration_seconds">Secs</string>
    <string name="duration_minutes">Mins</string>
    <string name="hint_disable_duration">Time to disable</string>
    <string name="info_scan_network">If you\'re not sure what the IP address for your Pi-Hole is, Pi-helper can attempt to find it for you by scanning your network.</string>
    <string name="action_scan_network">Scan Network</string>
    <string name="info_connect">If you already know the IP address or host of your Pi-Hole, you can also enter it below:</string>
    <string name="prompt_ip_address">Pi-Hole IP Address/Host</string>
    <string name="action_connect_pihole">Connect to Pi-Hole</string>
    <string name="info_connection_success">Pi-helper has successfully connected to your Pi-Hole!</string>
    <string name="info_authentication_required">You\'ll need to authenticate in order to enable and disable the Pi-hole.</string>
    <string name="prompt_password">Pi-Hole Web Password</string>
    <string name="action_authenticate_password">Authenticate with Password</string>
    <string name="prompt_api_key">Pi-Hole API Key</string>
    <string name="action_authenticate_api_key">Authenticate with API Key</string>
    <string name="connecting_to_pihole">Connecting to Pi-hole…</string>
    <string name="action_cancel">Cancel</string>
    <string name="duration_hours">Hours</string>
</resources>
