<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    tools:background="@color/colorSurface"
    tools:context=".AddPiHoleFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:id="@+id/piHelperLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_app_logo"
            android:tint="@color/colorOnSurface"
            android:transitionName="piHelperLogo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/info_scan_network"
            android:textAlignment="center" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/scanNetworkButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_scan_network" />

        <include layout="@layout/or_divider" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/info_connect"
            android:textAlignment="center" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_ip_address">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ipAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="pi.hole"
                android:inputType="text"
                android:maxLines="1"
                android:imeOptions="actionGo"
                tools:ignore="HardcodedText" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/connectButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_connect_pihole" />

    </LinearLayout>

</ScrollView>