<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    tools:background="@color/colorSurface">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/statusContent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:padding="16dp"
            tools:context=".MainFragment">

            <TextView
                android:id="@+id/status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:textAlignment="center"
                tools:text="Enabled"
                tools:textColor="@color/colorGreenDark" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/enableButton"
                style="@style/AppTheme.Button.Green"
                android:text="@string/action_enable" />

            <LinearLayout
                android:id="@+id/disableButtons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone"
                tools:visibility="visible">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/disable10SecondsButton"
                    style="@style/AppTheme.Button.Red"
                    android:text="@string/action_disable_10_seconds" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/disable30SecondsButton"
                    style="@style/AppTheme.Button.Red"
                    android:text="@string/action_disable_30_seconds" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/disable5MinutesButton"
                    style="@style/AppTheme.Button.Red"
                    android:text="@string/action_disable_5_minutes" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/disableCustomTimeButton"
                    style="@style/AppTheme.Button.Red"
                    android:text="@string/action_disable_custom" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/disablePermanentlyButton"
                    style="@style/AppTheme.Button.Red"
                    android:text="@string/action_disable_permanently" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <ImageView
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_app_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

</androidx.constraintlayout.widget.ConstraintLayout>